# ptcg-term-project

./: .gitignore  Makefile  README.md  pyproject.toml
pokemon-tcg-pricing/scripts/create_data/: inspect_full_dataset.py  tcgcsv_pokemon_pipeline.py
pokemon_tcg_pricing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
