[project]
name = "pokemon-tcg-pricing"
version = "0.1.0"
description = "Pipeline for building a master Pokémon TCG dataset from tcgcsv.com"
authors = [
    { name = "Aidan Adams", email = "awadams@vt.edu" }
]
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "requests",
    "py7zr",
    "tqdm",
    "pyarrow"
]
